Main page alignment fix.

--- a/src/components/MainPage/MainPage.scss
+++ b/src/components/MainPage/MainPage.scss
@@ -1,5 +1,5 @@
 .main-page-component {
-    width: 100%;
+    width: auto;
     height: 100%;
     display: flex;
     flex-direction: column;
